About section spacing fixes with padding of writing and image height

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -121,9 +121,10 @@ margin: center;
 list-style-type: none;
 text-align: center;
 
+}
+#about-section ul {
 
-
-
+    padding: 1%;
 }
 
 #about-section h3 {
@@ -134,7 +135,7 @@ text-align: center;
 #about-image {
     background: url('../images/about-image.jpg') no-repeat center center;
     width: 100%;
-    height: 500px;
+    height: 350px;
 
 
 
@@ -228,7 +229,6 @@ text-align: center;
 }
 
 
-
 #contact {
     background-color: #281b13;
 }
@@ -236,27 +236,29 @@ text-align: center;
 #contact-section {
 height: 200px;
 width: 100%;
-background-color: #FAF9F6;
 text-align: center;
+background-color:#e5d9c2;
 }
 
-#social-networks {
-    background-color: #FAF9F6;
-    
-    text-align: center;
+
+.social-networks{
+    background-color: #e5d9c2;
+}
+
+.social-networks i {
+text-align: center;
+font-size: 150%;
+color: #281b13;
+margin: 1%;
+padding: 5%;
 
 }
 
 .social-networks > li {
     display: inline;
-}
 
-.social-networks i {
-
-    font-size: 160%;
-    margin: 1%;
-    padding: 5%;
-    color: #281b13;
+   
     
 }
+
 
